Fix de la transion tablette > mobile pour les filtres

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@ body {
   font-family: "Raleway", sans-serif;
   display: flex;
   max-width: 1440px;
-  height: 1722.02px;
   margin: 0 auto;
 }
 
@@ -521,7 +520,7 @@ footer a {
 }
 
 /* Small devices (phones, less than 768px) */
-@media (max-width: 767.98px) {
+@media (max-width: 768px) {
   .main-container {
     padding: 0;
   }
